--- a/eam/view/view-ops/src/main/resources/public/business/ops/ops_service/ops_service_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/ops_service/ops_service_form.html
@@ -2,7 +2,7 @@
 /**
  * 服务 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-11 14:39:03
+ * @since 2021-08-12 13:24:53
  */
  -->
  <!DOCTYPE html>
@@ -37,8 +37,8 @@
 
 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('主键')}">主键</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('主键')}">主键</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="id" id="id" name="id" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('主键') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -46,8 +46,8 @@
 
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label"><div th:text="${lang.translate('服务类型')}">服务类型</div><div class="layui-required">*</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('服务类型')}">服务类型</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input type="radio" name="type" lay-filter="type" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.ops.ServiceTypeEnum')}" th:value="${e.code}" th:title="${e.text}">
                     </div>
                 </div>
@@ -55,8 +55,8 @@
 
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label"><div th:text="${lang.translate('名称')}">名称</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('名称')}">名称</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="serviceName" id="serviceName" name="serviceName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -64,8 +64,8 @@
 
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label"><div th:text="${lang.translate('备注')}">备注</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('备注')}">备注</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="serviceNotes" id="serviceNotes" name="serviceNotes" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('备注') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -73,8 +73,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('创建人ID')}">创建人ID</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('创建人ID')}">创建人ID</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="createBy" id="createBy" name="createBy" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('创建人ID') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -82,8 +82,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('创建时间')}">创建时间</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('创建时间')}">创建时间</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="createTime" id="createTime" name="createTime" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('创建时间') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -91,8 +91,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('修改人ID')}">修改人ID</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('修改人ID')}">修改人ID</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="updateBy" id="updateBy" name="updateBy" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('修改人ID') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -100,8 +100,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('修改时间')}">修改时间</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('修改时间')}">修改时间</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="updateTime" id="updateTime" name="updateTime" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('修改时间') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -109,8 +109,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('是否已删除')}">是否已删除</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('是否已删除')}">是否已删除</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="deleted" id="deleted" name="deleted" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('是否已删除') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -118,8 +118,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('删除人ID')}">删除人ID</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('删除人ID')}">删除人ID</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="deleteBy" id="deleteBy" name="deleteBy" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('删除人ID') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -127,8 +127,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('删除时间')}">删除时间</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('删除时间')}">删除时间</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="deleteTime" id="deleteTime" name="deleteTime" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('删除时间') }" type="text" class="layui-input"   />
                     </div>
                 </div>
@@ -136,8 +136,8 @@
 
                 
                 <div class="layui-form-item" style="display: none")>
-                    <div class="layui-form-label"><div th:text="${lang.translate('version')}">version</div></div>
-                    <div class="layui-input-block">
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('version')}">version</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="version" id="version" name="version" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('version') }" type="text" class="layui-input"   />
                     </div>
                 </div>
